--- a/recipes/marrymechicken.html
+++ b/recipes/marrymechicken.html
@@ -42,6 +42,20 @@
           <li>salt to taste</li>
      </ul>
      
+     <h3>Steps</h3>
+     <ol>
+          <li>Gather ingredients. Preheat the oven to 350 degrees F (175 degrees C).</li>
+          <li>Place chicken breasts on a flat work surface. Slice horizontally through the middle, being careful not to cut all the way through to the other side. Open the 2 sides and spread them out like an open book to butterfly.</li>
+          <li>Melt butter in a large, oven-safe skillet over medium-high heat. Add garlic, oregano, thyme. Sauté until fragrant, about 30 seconds.</li>
+          <li>Add chicken and cook until golden brown but not fully cooked, 3 to 4 minutes per side.</li>
+          <li>Pour 1/4 cup chicken broth into the skillet and bake in the preheated oven until chicken is no longer pink in the centers and juices run clear, about 15 minutes.</li>
+          <li>Meanwhile, place bacon in a large skillet and cook over medium-high heat, turning occasionally, until evenly browned, about 10 minutes. Drain bacon slices on paper towels and let cool enough to handle, about 5 minutes; chop.</li>
+          <li>At the same time, bring a large pot of lightly salted water to a boil. Cook angel hair pasta in the boiling water, stirring occasionally, until tender yet firm to the bite, 4 to 5 minutes. Drain and keep warm.</li>
+          <li>Remove skillet from the oven and transfer chicken to a plate, reserving juices in the skillet. Keep chicken warm and place skillet on the stovetop.</li>
+          <li>Whisk flour into the skillet over medium heat. Add remaining chicken broth, Parmesan cheese, and whipping cream. Whisk until combined.</li>
+          <li>Add sun-dried tomatoes, red pepper flakes, and salt. Add bacon and chicken back into the skillet.</li>
+          <li>Serve on top of hot cooked pasta.</li>
+     </ol>
 
 </body>
 
