--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <a href="/recipes/fajitas.html">Steak Fajitas</a>
           </p>
           
-     <h2>Desert</h2>
+     <h2>Dessert</h2>
           <a href="/recipes/peach_cobbler.html">Peach Cobbler</a>
 
 </body>
