Fixed: HTML Links to other pages not working, forgot to change the directory in anchor

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
      
      <h2>Dinner/Lunch</h2>
           <p>
-               <a href="/recipes/marrymechicken.html">Marry Me Chicken</a>
+               <a href="./recipes/marrymechicken.html">Marry Me Chicken</a>
                <br>
                <br>
-               <a href="/recipes/fajitas.html">Steak Fajitas</a>
+               <a href="./recipes/fajitas.html">Steak Fajitas</a>
           </p>
           
      <h2>Dessert</h2>
-          <a href="/recipes/peach_cobbler.html">Peach Cobbler</a>
+          <a href="./recipes/peach_cobbler.html">Peach Cobbler</a>
 
 </body>
 
