--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-     <h1 id="h1">///The Odin Project/Recipes...</h1>
+     <h1 class="page_title">///The Odin Project/Recipes...</h1>
      
      <div class="index_subheading"> 
           <h2>/Entrees..</h2>
