Using newly found box model technology, I revamped the home screen.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
 
      <h1 class="page_title">///The Odin Project/Recipes...</h1>
      
-     <div class="index_subheading"> 
-          <h2>/Entrees..</h2>
-          <p>
-               <a href="./recipes/marrymechicken.html">Marry Me Chicken</a>
-               <br>
-               <br>
-               <a href="./recipes/fajitas.html">Steak Fajitas</a>
-          </p>
+     <div class="main">  
+          <div class="dish-one">
+               <a href="./recipes/marrymechicken.html"><img src="./recipes/images/mmchicken.jpg" height="250px" width="250px"> </a> 
+               <p>Marry Me Chicken</p>
+          </div>
+          <div class="dish-two"> 
+               <a href="./recipes/fajitas.html"><img src="./recipes/images/steakfaj2.jpg" height="250px" width="250px"></a>
+               <p>Worlds Best Most Famous Fajitas</p>
+           </div>  
           
-     <h2>/Desserts..</h2>
-          <a href="./recipes/peach_cobbler.html">Peach Cobbler</a>
+
+           <div class="dish-three">
+               <a href="./recipes/peach_cobbler.html"><img src="./recipes/images/peach_cobbler.jpg" height="250px" width="250px"></a>
+               <p>Baggins Peach Cobbler</p>
+           </div>
      </div>
 
 </body>
